# todo-spec-driven

./: .gga  .gitignore  ACTIVE_PORTFORWARDS.txt  AGENTS.md  BETTER_AUTH_CLEANUP.md  CLAUDE.md  COMPLETION_SUMMARY.md  DIAGRAM-FLOW.md  INTEGRATION_COMPLETE.md  LANDING_PAGE_UPDATE.md  LOCAL_DATABASE_SETUP_COMPLETE.md  LOCAL_K8S_ACCESS.md  MICROSERVICES_LOCAL_TEST.md  PHASE5_FRONTEND_TASKS_COMPLETE.md  PHASE5_LOCAL_DEPLOYMENT_COMPLETE.md  QUICK_START_GUIDE.md  README-PHASE5.md  README.md  SECURITY.md  SETUP_COMPLETE.md  TEST-CHECKLIST.md  constitution-prompt-phase-2.md  constitution-prompt-phase-3.md  constitution-prompt-phase-5.md  docker-compose.yml  hackathon-ii.md  plan-prompt-phase-2.md  plan-prompt-phase-3.md  plan-prompt-phase-4.md  plan-prompt-phase-5.md  requirements.md  spec-prompt-phase-2.md  spec-prompt-phase-4.md  spec-prompt-phase-5.md  start-dev.sh  vercel.json
.github/: copilot-instructions.md
.spec-kit/: config.yaml
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Dockerfile.mcp  HEALTH_ENDPOINT.md  MIGRATIONS.md  README.md  RECURRING_TASKS_IMPLEMENTATION.md  REMINDERS_IMPLEMENTATION.md  REMINDERS_QUICKSTART.md  alembic.ini  docker-compose-health-check-example.yaml  k8s-health-check-example.yaml  pyproject.toml  test_datetime.py  test_health.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_audit_logs.py  20251213_0115_2faf4c113dc4_initial_schema.py  20251213_0241_e815a6193a17_add_intermediate_features.py  20251213_0259_516fd03e8a42_update_tables_with_enhanced_fields.py  20251213_2345_3230404ddfad_add_better_auth_tables.py  20251213_2356_53134e7b7865_add_better_auth_tables.py  20251213_better_auth_schema.sql  20251214_0008_823e89cc07f2_drop_old_users_table.py  20251214_0025_fb0c1d4db553_cleanup_database_tables.py  20251217_0608_5512fd3c7cb8_add_conversations_and_messages_tables.py  20251230_1919_e4681d6e52ed_add_phase_5_models_tags_task_tags_.py
backend/docs/: REMINDERS_API.md
backend/examples/: event_schemas_demo.py
backend/scripts/: test_migrations.sh
backend/src/: main.py  scripts.py
backend/src/agents/: __init__.py  config.py  errors.py  hooks.py  runner.py  todo_agent.py  tools.py
backend/src/api/: __init__.py  health.py
backend/src/api/routes/: __init__.py  auth.py  categories.py  chat.py  chatkit.py  dapr_callbacks.py  reminders.py  stats.py  tags.py  tasks.py
backend/src/chatkit/: __init__.py  server.py  store.py
backend/src/core/: auth_deps.py  config.py  database.py  deps.py  errors.py  logging.py  monitoring.py  security.py
backend/src/mcp_server/: __init__.py  __main__.py  server.py
backend/src/middleware/: auth.py  csrf.py  jwt_auth.py  logging.py  rate_limit.py  security_headers.py
backend/src/models/: __init__.py  audit_log.py  category.py  conversation.py  message.py  reminder.py  tag.py  task.py  task_tag.py  user.py
backend/src/schemas/: EVENTS_README.md  __init__.py  auth.py  category.py  chat.py  conversation.py  events.py  message.py  reminder.py  stats.py  tag.py  task.py  user.py
backend/src/services/: __init__.py  audit_service.py  auth_service.py  category_service.py  conversation_service.py  dapr_client.py  recurring_service.py  reminder_service.py  stats_service.py  tag_service.py  task_service.py  user_service.py
backend/src/utils/: caching.py  metrics.py  query_optimization.py  sanitize.py  sse.py
dapr-components/: config.yaml  pubsub-kafka.yaml  resiliency.yaml  secretstore-kubernetes.yaml  statestore-postgres.yaml
docs/: AIOPS.md  API.md  CLOUD-DEPLOYMENT-TASKS.md  CLOUD-DEPLOYMENT.md  DAPR-INTEGRATION.md  DEPLOYMENT.md  EVENT-SCHEMAS.md  KAFKA-SETUP.md  LOCAL-DEV-GUIDE.md  LOGGING.md  MINIKUBE-SETUP.md  MONITORING.md  RUNBOOKS.md  WEBSOCKET-INTEGRATION.md  phase-4-flow.md
frontend/: .dockerignore  .eslintignore  2025-12-18-ok-go-and-please-complete-the-hybrid-ui-more.txt  CLAUDE.md  Dockerfile  README.md  jest.config.js  jest.setup.js  middleware.ts.backup  next.config.ts  package-lock.json  package.json
helm/: CHART-SUMMARY.md  QUICKSTART.md
k8s/: 00-namespace.yaml  01-configmap.yaml  02-secret.yaml  03-mcp-server-deployment.yaml  04-mcp-server-service.yaml  05-backend-deployment.yaml  06-backend-service.yaml  07-frontend-deployment.yaml  08-frontend-service.yaml  09-ingress.yaml  10-servicemonitor.yaml  11-kafka-ui.yaml  DEPLOYMENT-CHECKLIST.md  MANIFEST-GUIDE.md  README.md  deploy.sh  validate.sh
prompts/: constitution-prompt-phase-4.md  spec-prompt-phase-3.md
scripts/: setup-database.sh  (+7 more)
services/audit-service/: Dockerfile  pyproject.toml
services/audit-service/components/: subscription.yaml
services/audit-service/src/: __init__.py  config.py  consumer.py  logger.py  main.py
services/audit-service/src/models/: __init__.py  audit_log.py
services/audit-service/src/routes/: __init__.py  audit.py  health.py
services/audit-service/tests/: __init__.py
services/notification-service/: .env.example  Dockerfile  pyproject.toml
services/notification-service/components/: subscription.yaml
services/notification-service/src/: __init__.py  config.py  consumer.py  main.py  notifier.py
services/notification-service/src/events/: __init__.py  reminder_events.py
services/notification-service/src/routes/: __init__.py  health.py
services/recurring-task-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/recurring-task-service/components/: subscription.yaml
services/recurring-task-service/src/: __init__.py  config.py  consumer.py  main.py  scheduler.py
services/recurring-task-service/tests/: __init__.py  conftest.py  test_consumer.py  test_scheduler.py
services/websocket-service/: Dockerfile  README.md  pyproject.toml
services/websocket-service/components/: subscription.yaml
services/websocket-service/src/: __init__.py  broadcaster.py  config.py  consumer.py  main.py
services/websocket-service/src/routes/: __init__.py  health.py  websocket.py
(+348 files in other folders)
