[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.115",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.0",
    "pyjwt[crypto]>=2.10.1",
    "pytest>=8.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.24",
    "python-json-logger>=4.0.0",
    "python-jose[cryptography]>=3.5.0",
]
