[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.115",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.0",
    "pyjwt[crypto]>=2.10.1",
    "pytest>=8.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.24",
    "python-json-logger>=4.0.0",
    "python-jose[cryptography]>=3.5.0",
    "openai-agents[litellm]>=0.6.3",
    "fastmcp>=2.14.1",
    "litellm>=1.80.10",
    "sse-starlette>=3.0.4",
    "psycopg2-binary>=2.9.10",
]

[tool.uv]
# UV package manager configuration
package = true  # Enable entry point installation
dev-dependencies = [
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
]

# Scripts entry points for the project
# Usage: uv run <script-name>
[project.scripts]
api = "src.scripts:run_api"
mcp = "src.scripts:run_mcp"

# Development commands (run directly):
# - API server: uv run uvicorn .src.main:app --reload --host 0.0.0.0 --port 8000
# - MCP server: uv run python -m .src.mcp_server
# - Migrations: uv run alembic upgrade head
# - Tests: uv run pytest tests/ -v
